2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am:
	* pygtk-gdk-classes.xml:
	* pygtk-gdkapplaunchcontext.xml: Add new class gtk.gdk.AppLaunchContext.

2009-03-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwindow.xml: Update docs to 2.14
	
	* Makefile.am:
	* pygtk-gtk-classes.xml:
	* pygtk-gtktoolshell.xml: Add new class gtk.ToolShell.

2009-03-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktoolitem.xml:
	* pygtk-gtktooltip.xml:
	* pygtk-gtk-stock-items.xml:
	* pygtk-gtkselectiondata.xml: Update docs to 2.14

2009-02-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkprintsettings.xml:
	* pygtk-gtksocket.xml:
	* pygtk-gtkplug.xml:
	* pygtk-gtkpagesetup.xml: Update docs to 2.14
	
	* imaegs/*:
	* Makefile.am:
	* pygtk-gtk-constants.xml: Add new constants with new images.

2009-02-27  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmessagedialog.xml:
	* pygtk-gtklayout.xml:
	* pygtk-gtkimage.xml:
	* pygtk-gtkicontheme.xml:
	* pygtk-gtkiconinfo.xml:
	* pygtk-gtkhandlebox.xml:
	* pygtk-gtkfontselection.xml:
	* pygtk-gtkfontselectiondialog.xml: Update docs to 2.14
	
	* pygtk-gtktooltips.xml: Add deprecation warnings.

	* Makefile.am:
	* pygtk-gtk-classes.xml:
	* pygtk-gtkmountoperation.xml: Add new class gtk.MountOperation.

2009-02-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkfilechooser.xml:
	* pygtk-gtkdialog.xml: Update docs to 2.14

2009-02-23  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	Bug 567736 – Misleading suggestion of get_child_requisition in
	gtk.Widget.size_request documentation

	* pygtk-gtkwidget.xml: Apply a patch from Pietro Battiston

2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtkcontainer.xml:
	* pygtk-gtkcolorselectiondialog.xml:
	* pygtk-gtkclipboard.xml:
	* pygtk-gtkadjustment.xml:
	* pygtk-gtkaccelgroup.xml:
	* pygtk-gtkwidget.xml: Update docs to 2.14

2008-11-28  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtkstatusicon.xml: