@@ -1,5 +1,10 @@
 2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* pygtk-gdkwindow.xml:
+	* pygtk-gdkscreen.xml: Update docs to 2.14
+
+2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* Makefile.am:
 	* pygtk-gdk-classes.xml:
 	* pygtk-gdkapplaunchcontext.xml: Add new class gtk.gdk.AppLaunchContext.
